also fixed the edit model binding.

--- a/ModelBindingIssue/Pages/DialogItem/Index.cshtml
+++ b/ModelBindingIssue/Pages/DialogItem/Index.cshtml
@@ -8,4 +8,4 @@
 {
     <partial name="_BaseViewModel" Model="Model.DialogItem" />
 }
-<vc:base-dialog-item interaction-model-section-item-view-model="@Model.InteractionModelSectionItemViewModel"></vc:base-dialog-item>
+<vc:base-dialog-item dialog-item-view-model="@Model.DialogItem"></vc:base-dialog-item>
