--- a/ModelBindingIssue/Pages/Shared/_BaseDialogItem.cshtml
+++ b/ModelBindingIssue/Pages/Shared/_BaseDialogItem.cshtml
@@ -1,5 +1,6 @@
 ﻿@model BaseDialogItemViewModel
-<input type="hidden" asp-for="Type" />
+<input type="hidden" asp-for="ActualType" />
+<input type="hidden" asp-for="DialogItemType" />
 <div class="form-group">
     <label asp-for="Ordering" class="control-label"></label>
     <input asp-for="Ordering" class="form-control" value="@Model.Ordering" />
