minor rename to better fit actual representation

--- a/ModelBindingIssue/Pages/Shared/_BaseDialogItem.cshtml
+++ b/ModelBindingIssue/Pages/Shared/_BaseDialogItem.cshtml
@@ -1,6 +1,6 @@
 ﻿@model BaseDialogItemViewModel
 <input type="hidden" asp-for="ActualType" />
-<input type="hidden" asp-for="DialogItemType" />
+<input type="hidden" asp-for="EntityType" />
 <div class="form-group">
     <label asp-for="Ordering" class="control-label"></label>
     <input asp-for="Ordering" class="form-control" value="@Model.Ordering" />
